--- a/.github/workflows/bitbucket-pipelines.yml
+++ b/.github/workflows/bitbucket-pipelines.yml
@@ -5,7 +5,7 @@ on:
     branches: [ "main" ]
 
 env:
-  PROJECT_ID: root-fort-412616 # TODO: update Google Cloud project id
+  PROJECT_ID: inbound-pattern-422518-k7 # TODO: update Google Cloud project id
   APP_NAME: individual-project-service-registry # TODO: update Artifact Registry location
   SER_NAME: individual-service-registry # TODO: update Artifact Registry location
   REGION: europe-west1 # TODO: update Cloud Run service region
@@ -31,15 +31,31 @@ jobs:
 
       # BEGIN - Docker auth and build (NOTE: If you already have a container image, these Docker steps can be omitted)
 
+      # - name: Build Image, Push to Registry, Deploy to Cloud Run
+      #   run: |
+      #     export IMAGE_NAME=europe-west1-docker.pkg.dev/${{env.PROJECT_ID}}/${{env.APP_NAME}}/${{env.SER_NAME}}:$GITHUB_SHA
+      #     echo "${KEY_FILE}" > client-secret.json
+      #     gcloud auth activate-service-account ${{env.PROJECT_ID}}@appspot.gserviceaccount.com --key-file ${{env.PROJECT_ID}}-3f48ad93aa23.json
+      #     gcloud config set project ${{env.PROJECT_ID}}
+      #     gcloud auth configure-docker europe-west1-docker.pkg.dev
+      #     export DOCKER_BUILDKIT=0
+      #     cd service-registry
+      #     docker build -t $IMAGE_NAME .
+      #     docker push $IMAGE_NAME
+      #     gcloud run deploy ${{env.SER_NAME}} --image $IMAGE_NAME --port ${{env.SER_PORT}} --region ${{env.REGION}} --cpu=2 --memory=8Gi --timeout=3000 --allow-unauthenticated || true
+
+
+
       - name: Build Image, Push to Registry, Deploy to Cloud Run
         run: |
           export IMAGE_NAME=europe-west1-docker.pkg.dev/${{env.PROJECT_ID}}/${{env.APP_NAME}}/${{env.SER_NAME}}:$GITHUB_SHA
-          echo "${KEY_FILE}" > client-secret.json
-          gcloud auth activate-service-account ${{env.PROJECT_ID}}@appspot.gserviceaccount.com --key-file ${{env.PROJECT_ID}}-3f48ad93aa23.json
+          echo '${{ secrets.KEY_FILE }}' | jq '.' > client-secret.json
+          gcloud auth activate-service-account individual-account@inbound-pattern-422518-k7.iam.gserviceaccount.com --key-file client-secret.json
           gcloud config set project ${{env.PROJECT_ID}}
           gcloud auth configure-docker europe-west1-docker.pkg.dev
           export DOCKER_BUILDKIT=0
-          cd service-registry
           docker build -t $IMAGE_NAME .
           docker push $IMAGE_NAME
-          gcloud run deploy ${{env.SER_NAME}} --image $IMAGE_NAME --port ${{env.SER_PORT}} --region ${{env.REGION}} --cpu=2 --memory=8Gi --timeout=3000 --allow-unauthenticated || true
+          gcloud run deploy ${{env.SER_NAME}} --image $IMAGE_NAME --port ${{env.SER_PORT}} --region ${{env.REGION}} --cpu=1 --memory=1Gi --timeout=3000 --allow-unauthenticated || true
+        env:
+          KEY_FILE: ${{ secrets.KEY_FILE }}
